更新页面布局和工时记录文档

--- a/工时记录统计.md
+++ b/工时记录统计.md
@@ -95,4 +95,4 @@
 | 7月 | 85小时25分钟 | 9小时29分钟 | 9天 |
 | **总计** | **570小时4分钟** | **10小时0分钟** | **57天** |
 
-*注：7月15日已打卡上班（09:43），但尚未下班打卡，因此未计入总工时。* 
+*注：7月15日上班（09:43），但尚未下班打卡，因此未计入总工时。* 
